# smoothsearch

./: .gitignore  README.md  composer.json  package-lock.json  package.json  phpunit.xml.dist  readme.txt  smooth-search.php  vitest.config.js
.github/workflows/: plugin-check.yml  release-preparation.yml
admin/: index.html  package-lock.json  package.json  vite.config.js
admin/src/: AdminApp.css  AdminApp.jsx  index.css  main.jsx
admin/src/__tests__/: StylerTab.test.jsx
admin/src/components/: AboutTab.css  AboutTab.jsx  HealthTab.css  HealthTab.jsx  SettingsTab.css  SettingsTab.jsx  ShortcodeTab.css  ShortcodeTab.jsx  StylerTab.css  StylerTab.jsx
assets/css/: search-bar.css
assets/js/: block.js  indexeddb-cache.js  search-bar.js  search-worker.js
assets/wasm/: package.json  smooth_search_wasm.d.ts  smooth_search_wasm.js  smooth_search_wasm_bg.wasm  smooth_search_wasm_bg.wasm.d.ts
docs/: DEVELOPERDOC.md  HOOKS.md  QUICK-START.md  TESTING.md  Technical.md
includes/: API.php  Block.php  Container.php  Frontend.php  Indexer.php  ProductRepository.php  Settings.php
scripts/: build.sh  refresh.sh
tests/: bootstrap.php
tests/js/: search-bar.test.js
tests/unit/: APITest.php
wasm/: Cargo.toml
wasm/src/: lib.rs  search_engine.rs  types.rs
