[package]
name = "smooth-search-wasm"
version = "1.0.0"
authors = ["Smooth Plugins <support@smoothplugins.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
nucleo-matcher = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-bulk-memory"]
